--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/jquery": "^3.3.6",
     "@types/jqueryui": "^1.12.3",
     "@types/node": "^10.7.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nodemark": "^0.3.0"
   },
   "scripts": {
     "test": "mocha -r ts-node/register test.ts",
