--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jquery": "^3.3.6",
     "@types/jqueryui": "^1.12.3",
     "@types/node": "^10.7.1",
+    "@types/resize-observer-browser": "^0.1.3",
     "mocha": "^5.2.0",
     "nodemark": "^0.3.0"
   },
